fixed tg bugs of creating and patching and added service and taskController tests